--- a/www/src/styles/sequence.css
+++ b/www/src/styles/sequence.css
@@ -1,11 +1,11 @@
 :root {
-  --segment-top-height: 100px;
-  --segment-top-offset: 20px;
+  --segment-top-height: 5%;
+  --segment-top-offset: 44px;
   --segment-bottom-height: 170px;
   --segment-bottom-offset: 140px;
   /* Adds some extra width to help the segments
    * have correct overlapping */
-  --segment-radius-offset: 20%;
+  --segment-radius-offset: 18%;
 }
 
 .SequenceLines {
@@ -59,46 +59,62 @@
     }
   }
 
+  &__point {
+    position: absolute;
+    top: var(--segment-top-offset);
+    left: calc(50% - 7px);
+    width: 14px;
+    height: 14px;
+    border-radius: 100px;
+    background-color: theme('colors.yellow');
+  }
+
   &__segment--top {
     position: absolute;
     top: var(--segment-top-offset);
     width: var(--segment-radius-offset);
-    height: var(--segment-top-height);
-    border-width: 0 0 1px 1px;
+    height: -webkit-fill-available;
+    border-width: 0 0 0 1px;
     left: calc(50% - 0.5px);
-    border-radius: 0 0 0 16px;
     border-color: theme('colors.yellow');
+
+    @screen md {
+      height: var(--segment-top-height);
+      border-width: 0 0 1px 1px;
+      border-radius: 0 0 0 16px;
+    }
   }
 
   &__segment--middle {
-    position: absolute;
-    /* top - 1px to account for border height offset */
-    top: calc(var(--segment-top-height) + var(--segment-top-offset) - 1px);
-    left: var(--segment-radius-offset);
-    width: calc(50% - var(--segment-radius-offset));
-    height: calc(
-      100% - var(--segment-top-height) - var(--segment-top-offset) -
-        var(--segment-bottom-height) - var(--segment-bottom-offset) + 2px
-    );
-    border-width: 1px 1px 1px 0;
-    border-radius: 0 16px 16px 0;
-    border-color: theme('colors.yellow');
+    @screen md {
+      position: absolute;
+      /* top - 1px to account for border height offset */
+      top: calc(var(--segment-top-height) + var(--segment-top-offset) - 1px);
+      left: var(--segment-radius-offset);
+      width: calc(50% - var(--segment-radius-offset));
+      height: calc(
+        100% - var(--segment-top-height) - var(--segment-top-offset) -
+          var(--segment-bottom-height) - var(--segment-bottom-offset) + 2px
+      );
+      border-width: 1px 1px 1px 0;
+      border-radius: 0 16px 16px 0;
+      border-color: theme('colors.yellow');
+    }
   }
 
   &__segment--bottom {
-    /* TODO: make this go all the way to the bottom
-     * and add a background-color white area from the icon
-     * through the footer text to trim the bottom of the line */
-    position: absolute;
-    top: calc(
-      100% - var(--segment-bottom-height) - var(--segment-bottom-offset)
-    );
-    left: calc(50% - 0.5px);
-    height: var(--segment-bottom-height);
-    width: var(--segment-radius-offset);
+    @screen md {
+      position: absolute;
+      top: calc(
+        100% - var(--segment-bottom-height) - var(--segment-bottom-offset)
+      );
+      left: calc(50% - 0.5px);
+      height: -webkit-fill-available;
+      width: var(--segment-radius-offset);
 
-    border-width: 1px 0 0 1px;
-    border-color: theme('colors.yellow');
-    border-radius: 16px 0 0 0;
+      border-width: 1px 0 0 1px;
+      border-color: theme('colors.yellow');
+      border-radius: 16px 0 0 0;
+    }
   }
 }
